--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.3",
+    "@mui/lab": "^6.0.0-beta.14",
+    "@mui/material": "^6.1.6",
     "@mui/x-data-grid-pro": "^7.22.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
