--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.7",
+    "@mui/x-data-grid": "^7.22.3",
     "@mui/x-data-grid-pro": "^7.22.1",
     "@mui/x-date-pickers": "^7.22.2",
     "@testing-library/jest-dom": "^5.17.0",
