--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.4",
     "@mui/lab": "^6.0.0-beta.14",
-    "@mui/material": "^6.1.6",
+    "@mui/material": "^6.1.7",
+    "@mui/x-data-grid": "^7.22.3",
     "@mui/x-data-grid-pro": "^7.22.1",
     "@mui/x-date-pickers": "^7.22.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,13 +21,14 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
-    "moment": "^2.30.1",
     "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
