--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.1",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.1.4",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.7",
