--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
+    "primereact": "^10.9.3",
     "react": "^18.3.1",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
