--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.7",
+    "@mui/x-charts": "^7.27.1",
     "@mui/x-data-grid": "^7.22.3",
     "@mui/x-data-grid-pro": "^7.22.1",
     "@mui/x-date-pickers": "^7.22.2",
